CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

ENABLE_LANGUAGE(Fortran)

PROJECT(PKTools)
SET(CMAKE_Fortran_COMPILER gfortran)

FILE(GLOB_RECURSE PKTOOLS_SRCS ${CMAKE_SOURCE_DIR}/src/*.f90)

FILE(GLOB PKTOOLS_EXAMPLES ${CMAKE_SOURCE_DIR}/examples/*.f90)

FOREACH(EXAMPLE ${PKTOOLS_EXAMPLES})
    GET_FILENAME_COMPONENT(BIN_NAME ${EXAMPLE} NAME_WLE)
    ADD_EXECUTABLE(${BIN_NAME} ${PKTOOLS_SRCS} ${EXAMPLE})
ENDFOREACH()
